Style fix: css for table pagination bugged on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -244,3 +244,7 @@ input[type="number"] {
 .ui.fluid.dropdown {
   max-height: 38px !important;
 }
+
+.ReactTable .-pagination input, .ReactTable .-pagination select {
+  padding: 0 !important;
+}
